
        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* feat: set span outcome to success or failure depending on whether an error
  was captured during when the span was active.
  https://github.com/elastic/apm-agent-nodejs/issues/1814

* feat: support numeric and boolean labels {pull}1909[#1909] +
  Add an optional `stringify` option to `apm.setLabel(name, version, stringify = true)`
  and `apm.addLabels(labels, stringify = true)`, which can be set `false` to
  allow numeric and boolean labels. Stringify defaults to true for backwards
  compatibility -- stringification will be removed in a future major version.

* feat: added support for cloud metadata fetching
  Implements: https://github.com/elastic/apm-agent-nodejs/issues/1815

  Agent now collects information about its cloud environment and includes this data in the APM Server's metadata payload.  See
  https://github.com/elastic/apm/blob/3acd10afa0a9d3510e819229dfce0764133083d3/specs/agents/metadata.md#cloud-provider-metadata
  for more information.

[float]
===== Bug fixes


[[release-notes-3.10.0]]
==== 3.10.0 - 2021/01/11

[float]
===== Features

* feat: Improve handling of raw body parsing
  The agent will now report raw/`Buffer` encoded post bodies as '<Buffer>'.

* feat: Add support for api keys {pull}1818[#1818] +
  This allows the usage of API keys for authentication to the APM server

* feat: Add automatic instrumentation of the https://github.com/elastic/elasticsearch-js[@elastic/elasticsearch] package {pull}1877[#1870]
+
The instrumentation of the legacy "elasticsearch" package has also changed
slightly to commonalize:
+
** "span.context.destination" is set on all Elasticsearch spans, not just a
   subset of query-like API endpoints.
** For query-like API endpoints (e.g. `/_search`), the capturing of query details