@@ -101,15 +101,31 @@ Agent.prototype.setTransactionName = function (name) {
   return this._instrumentation.setTransactionName.apply(this._instrumentation, arguments)
 }
 
-Agent.prototype.setTransactionOutcome = function(outcome) {
+/**
+ * Sets outcome value for current transaction
+ *
+ * The setOutcome method allows users to override the default
+ * outcome handling in the agent and set their own value.
+ *
+ * @param {string} outcome must be one of `failure`, `success`, or `unknown`
+ */
+Agent.prototype.setTransactionOutcome = function (outcome) {
   return this._instrumentation.setTransactionOutcome.apply(this._instrumentation, arguments)
 }
 
+/**
+ * Sets outcome value for current active span
+ *
+ * The setOutcome method allows users to override the default
+ * outcome handling in the agent and set their own value.
+ *
+ * @param {string} outcome must be one of `failure`, `success`, or `unknown`
+ */
 Agent.prototype.startSpan = function (name, type, subtype, action, { childOf } = {}) {
   return this._instrumentation.startSpan.apply(this._instrumentation, arguments)
 }
 
-Agent.prototype.setSpanOutcome = function(outcome) {
+Agent.prototype.setSpanOutcome = function (outcome) {
   return this._instrumentation.setSpanOutcome.apply(this._instrumentation, arguments)
 }
 
@@ -274,6 +290,7 @@ Agent.prototype.captureError = function (err, opts, cb) {
     ? opts.response
     : trans && trans.res
   var captureAttributes = opts && opts.captureAttributes
+  const skipOutcome = opts && opts.skipOutcome
   var _isError = isError(err)
 
   if ((!opts || opts.handled !== false) &&
@@ -294,7 +311,8 @@ Agent.prototype.captureError = function (err, opts, cb) {
     })
   }
 
-  if (span && span.type !== 'external') {
+  // outcome handling for external spans is handled elsewhere
+  if (span && span.type !== 'external' && !skipOutcome) {
     span._setOutcomeFromErrorCapture(constants.SPAN.OUTCOME.FAILURE)
   }
 
