@@ -275,7 +275,7 @@ Instrumentation.prototype.setTransactionName = function (name) {
   trans.name = name
 }
 
-Instrumentation.prototype.setTransactionOutcome = function(outcome) {
+Instrumentation.prototype.setTransactionOutcome = function (outcome) {
   const trans = this.currentTransaction
   if (!trans) {
     this._agent.logger.debug('no active transaction found - cannot set transaction outcome')
@@ -293,9 +293,9 @@ Instrumentation.prototype.startSpan = function (name, type, subtype, action, opt
   return this.currentTransaction.startSpan.apply(this.currentTransaction, arguments)
 }
 
-Instrumentation.prototype.setSpanOutcome = function(outcome) {
+Instrumentation.prototype.setSpanOutcome = function (outcome) {
   const span = this.activeSpan
-  if(!span) {
+  if (!span) {
     this._agent.logger.debug('no active span found - cannot set span outcome')
     return null
   }
