@@ -8,6 +8,7 @@
 
 const { getDBDestination } = require('../../context')
 const { setElasticsearchDbContext } = require('../../elasticsearch-shared')
+const constants = require('../../../constants')
 
 module.exports = function (elasticsearch, agent, { version, enabled }) {
   if (!enabled) {
@@ -81,7 +82,8 @@ module.exports = function (elasticsearch, agent, { version, enabled }) {
       })
 
       this.on('response', (err, result) => {
-        // TODO set "span.outcome" (from err and result.statusCode)
+        // TODO set "span.outcome" (from err and result.statusCode)        )
+        const span = spanFromEsResult.get(result)
 
         if (err) {
           // Error properties are specified here:
@@ -93,7 +95,8 @@ module.exports = function (elasticsearch, agent, { version, enabled }) {
           //   grabbing potentially large and sensitive properties like
           //   `err.data` on DeserializationError.
           const errOpts = {
-            captureAttributes: false
+            captureAttributes: false,
+            skipOutcome: true
           }
           if (err.name === 'ResponseError' && err.body && err.body.error) {
             // Include some data from the Elasticsearch API response body:
@@ -106,11 +109,20 @@ module.exports = function (elasticsearch, agent, { version, enabled }) {
             }
           }
 
+          // The capture error method normally sets an outcome on the
+          // active span.  However, the Elasticsearch client span (the span
+          // we're concerned with here) is no longer the active span.
+          // Therefore, we manully set an outcome here, and also set
+          // errOpts.skipOutcome above. The errOpts.skipOutcome options
+          // instructs captureError to _not_ set the outcome on the active span
+          if (span !== undefined) {
+            span._setOutcomeFromErrorCapture(constants.SPAN.OUTCOME.FAILURE)
+          }
           agent.captureError(err, errOpts)
         }
 
-        const span = spanFromEsResult.get(result)
         if (span !== undefined) {
+          console.log(span.name, span.outcome)
           span.end()
           spanFromEsResult.delete(result)
         }
